--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
     </repositories>
 
     <dependencies>
+     Мо
+
         <dependency>
             <groupId>com.mlp</groupId>
             <artifactId>mlp-sdk</artifactId>
@@ -52,6 +54,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20230618</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.8.22</version>
         </dependency>
 
 
