--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,37 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.squareup.retrofit2</groupId>-->
+<!--            <artifactId>retrofit</artifactId>-->
+<!--            <version>2.0.2</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/io.ktor/ktor-client-core-jvm -->
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-client-apache</artifactId>
+            <version>1.6.4</version> <!-- Указать актуальную версию -->
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-client-core</artifactId>
+            <version>1.6.4</version> <!-- Указать актуальную версию -->
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-client-json</artifactId>
+            <version>1.6.4</version> <!-- Указать актуальную версию -->
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json</artifactId>
+            <version>1.3.0</version> <!-- Версия kotlinx.serialization -->
+        </dependency>
+
+
+
+
+
 
 
         <dependency>
